3.3/deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-backend
  namespace: app
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool
