3.3/deployment-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-frontend
  namespace: app
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool
