3.3/service-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: app
spec:
  selector:
    app: backend
  ports:
    - name: http-multitool
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https-multitool
      protocol: TCP
      port: 443
      targetPort: 443
