3.3/service-cache.yml
apiVersion: v1
kind: Service
metadata:
  name: cache
  namespace: app
spec:
  selector:
    app: cache
  ports:
    - name: http-multitool
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https-multitool
      protocol: TCP
      port: 443
      targetPort: 443
