3.3/service-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: app
spec:
  selector:
    app: frontend
  ports:
    - name: http-multitool
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https-multitool
      protocol: TCP
      port: 443
      targetPort: 443
